Annotate the fun iptables match a bit

--- a/client/wg0.conf
+++ b/client/wg0.conf
@@ -7,6 +7,9 @@ Table = 1234
 PostUp = ip rule add fwmark 1234 table 1234
 PostUp = ip rule add ipproto udp dport 53 table 1234
 PostUp = ip rule add ipproto tcp dport 53 table 1234
+# `\! -f` to match only head fragments / unfragmented packets
+# `-m u32 --u32 "0>>22&0x3C@5&0xF0=0xC0:0xE0"` tests that first byte of UDP payload matches a QUIC long header packet
+# See `man iptables-extensions 8` under `MATCH EXTENSIONS`
 PostUp = iptables -A OUTPUT -t mangle -p udp --dport 443 \! -f -m u32 --u32 "0>>22&0x3C@5&0xF0=0xC0:0xE0" -j MARK --set-mark 1234
 PreDown = ip rule del fwmark 1234 table 1234
 PreDown = ip rule del ipproto udp dport 53 table 1234
